Remove onerror handling from hero image
Removed onerror attribute from hero image.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -519,7 +519,7 @@
                 </div>
             </div>
             <div class="hero-right">
-                <img src="/static/images/child1_1.png" onerror="this.onerror=null; this.src='./static/images/child1_1.png';" alt="BirthSense Hero Image">
+                <img src="/static/images/child1_1.png" alt="BirthSense Hero Image">
             </div>
         </section>
 
