--- a/frontend/index.html
+++ b/frontend/index.html
@@ -551,7 +551,7 @@
 
         <section id="about" class="about-section container">
             <div class="about-image">
-                <img src="./static/images/child5.jpg" onerror="this.onerror=null; this.src='./static/images/child5.jpg';" alt="Mother and Baby Illustration">
+                <img src="/static/images/child5.jpg" alt="Mother and Baby Illustration">
             </div>
             <div class="about-text">
                 <p>AI IN OBSTETRICS</p>
